ENG-5473: fix java code